--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Amitay</title>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>About me</h1>
-	<img class="picture" src="profile" alt="profie_picture">
+	<p><img src="pic.jpeg" alt="profie_picture" style="50px">
+		&emsp;Hello my name is Amitay Yekuel<br> &emsp;I'm from Rishon Le Zion<br>&emsp;I'm a graduate of Computer Science from Ariel University</p>
+		<p><br></p>
+		
+	<h1>Hobbies</h1>
+	<p>&ensp;I like to programing</p>
+	<h1>Targets</h1>
 
 </body>
 </html>
